The Initial Design using Siimple

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,2 +1,14 @@
+    </div>
+    <!-- /.main -->
+
+    <!-- Foot -->
+    <div class="foot" align="center">
+      <!-- Foot logo -->
+      <a href="./" class="foot-logo">Week Project</a>
+      <!-- Foot text -->
+      Made with <span class="heart"></span> by <a href="https://chilts.org/">Andrew Chilton</a>
+      for <a href="https://appsattic.com/">AppsAttic</a>.
+    </div>
+
   </body>
 </html>
