--- a/templates/project-new.html
+++ b/templates/project-new.html
@@ -4,23 +4,23 @@
     New Project
   </h2>
 
-<form action="/p/new" method="post">
-<div class="row">
-  <div class="col-12">
-    <input class="form-input" type="text" placeholder="Project Title">
-  </div>
-</div>
-<div class="row">
-  <div class="col-12">
-    <textarea class="form-textarea" rows="4" placeholder="Describe what you are going to learn ..."></textarea>
-  </div>
-</div>
-<div class="row">
-  <div class="col-12">
-    <input class="form-input" value="Submit form" type="submit">
-  </div>
-</div>
-</form>
+  <form action="/p/new" method="post">
+    <div class="row">
+      <div class="col-12">
+        <input class="form-input" type="text" name="title" placeholder="Project Title">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <textarea class="form-textarea" rows="4" name="content" placeholder="Describe what you are going to learn ..."></textarea>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <input class="form-input" value="Create Project" type="submit">
+      </div>
+    </div>
+  </form>
 
   <p>
     (Ends)
