--- a/templates/project-info.html
+++ b/templates/project-info.html
@@ -1,10 +1,8 @@
 {{ template "header.html" . }}
 
-  <h2>{{ .Project.Title }}<h2>
+  <h2>{{ .Project.Title }}</h2>
 
-  <p>
-    Your Project &apos;The Week Project&apos;.
-  </p>
+  <p>{{ .Project.Content }}</p>
 
   <p>
     (Ends)
