Add validation to the Project type and the incoming form

--- a/templates/project-new.html
+++ b/templates/project-new.html
@@ -7,12 +7,12 @@
   <form action="/p/new" method="post">
     <div class="row">
       <div class="col-12">
-        <input class="form-input" type="text" name="title" placeholder="Project Title">
+        <input class="form-input" type="text" name="Title" placeholder="Project Title">
       </div>
     </div>
     <div class="row">
       <div class="col-12">
-        <textarea class="form-textarea" rows="4" name="content" placeholder="Describe what you are going to learn ..."></textarea>
+        <textarea class="form-textarea" rows="4" name="Content" placeholder="Describe what you are going to learn ..."></textarea>
       </div>
     </div>
     <div class="row">
