--- a/templates/user-u-project-p.html
+++ b/templates/user-u-project-p.html
@@ -1,7 +1,7 @@
 {{ template "header.html" . }}
 
   <p>
-    This is a project by chilts called &apos;The Week Project&apos;.
+    This is a project by &quot;{{ .Project.UserName }}&quot; called &quot;{{ .Project.Title }}&quot;.
   </p>
 
   <p>
