Add the contribute section, plus the GitHub buttons

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,19 @@
     </div>
     <!-- /.main -->
 
+    <!-- Week Project Info -->
+    <div class="gh-btns" align="center">
+      <!-- Contribute -->
+      <h4>Want to help make the Week Project project better?</h4>
+      <p>You can contribute on GitHub by forking the repo and submitting pull requests.</p>
+
+      <!-- GitHub Buttons -->
+      <a class="github-button" href="https://github.com/appsattic/weekproject.org" data-icon="octicon-star" data-count-href="/appsattic/weekproject.org/stargazers" data-count-api="/repos/appsattic/weekproject.org#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star appsattic/weekproject.org on GitHub">Star</a>
+      &nbsp;&nbsp;
+      <a class="github-button" href="https://github.com/appsattic/weekproject.org/fork" data-icon="octicon-repo-forked" data-count-href="/appsattic/weekproject.org/network" data-count-api="/repos/appsattic/weekproject.org#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork appsattic/weekproject.org on GitHub">Fork</a>
+
+    </div>
+
     <!-- Foot -->
     <div class="foot" align="center">
       <!-- Foot logo -->
@@ -9,6 +22,8 @@
       Made with <span class="heart"></span> by <a href="https://chilts.org/">Andrew Chilton</a>
       for <a href="https://appsattic.com/">AppsAttic</a>.
     </div>
+
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 
   </body>
 </html>
