Can now add an update to each project

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -24,6 +24,7 @@
     </div>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script src="/s/js/app.js"></script>
 
   </body>
 </html>
