Add breadcrumbs to all pages

--- a/templates/p-new.html
+++ b/templates/p-new.html
@@ -1,5 +1,13 @@
 {{ template "header.html" . }}
 
+  <p>
+    <a href="/">Home</a>
+    &gt;
+    <a href="/p/">Projects</a>
+    &gt;
+    <strong>New</strong>
+  </p>
+
   <h2>
     New Project
   </h2>
