--- a/templates/p.html
+++ b/templates/p.html
@@ -1,5 +1,11 @@
 {{ template "header.html" . }}
 
+  <p>
+    <a href="/">Home</a>
+    &gt;
+    <strong>Projects</strong>
+  </p>
+
   <p><a class="btn" href="/p/new">Create New Project</a></p>
 
   {{ if .Projects }}
