--- a/templates/p-project-update.html
+++ b/templates/p-project-update.html
@@ -1,5 +1,15 @@
 {{ template "header.html" . }}
 
+  <p>
+    <a href="/">Home</a>
+    &gt;
+    <a href="/p/">Projects</a>
+    &gt;
+    <a href="/p/{{ .Project.Name }}/">{{ .Project.Title }}</a>
+    &gt;
+    <strong>Status Update</strong>
+  </p>
+
   <h2>
     Add Update
   </h2>
