Split breadcrumbs and action buttons into columns

--- a/templates/p-new.html
+++ b/templates/p-new.html
@@ -1,12 +1,20 @@
 {{ template "header.html" . }}
 
-  <p>
-    <a href="/">Home</a>
-    &gt;
-    <a href="/p/">Projects</a>
-    &gt;
-    <strong>New</strong>
-  </p>
+  <div class="grid grid-fluid">
+    <div class="row">
+      <div class="col-8">
+        <p>
+          <a href="/">Home</a>
+          &gt;
+          <a href="/p/">Projects</a>
+          &gt;
+          <strong>New</strong>
+        </p>
+      </div>
+      <div class="col-4">
+      </div>
+    </div>
+  </div>
 
   <h2>
     New Project
