--- a/templates/p.html
+++ b/templates/p.html
@@ -35,7 +35,7 @@
           |
           <a href="/p/{{ .Name }}/edit">Edit</a>
           |
-          <a href="/p/{{ .Name }}/remove">Remove</a>
+          <a href="/p/{{ .Name }}/delete">Delete</a>
         </td>
       </tr>
     {{ end }}
