--- a/templates/u-user-p-project.html
+++ b/templates/u-user-p-project.html
@@ -1,28 +1,18 @@
 {{ template "header.html" . }}
 
-  <h3>Status</h3>
-
-  <p>
-    Progress: {{ .Project.Progress }}
-    <br>
-    Updates: {{ len .Updates }}
-  </p>
-
-  <h3>Description</h3>
+  <h3>{{ .Project.Progress }}% Complete</h2>
 
   <div>
     {{ .Project.Content }}
   </div>
 
-  <h3>Updates</h3>
-
-  <ul>
-    {{ range .Updates }}
-    <li>{{ .Id }} : {{ .Status }} - {{ .Progress }}</li>
-    {{ else }}
-    <li>No Updates</li>
-    {{ end }}
-  </ul>
+  {{ range $i, $Update := .Updates }}
+    <h3>Update {{ inc $i }} - {{ $Update.Progress }}%</h3>
+    <p>{{ $Update.Status }}</p>
+  {{ else }}
+    <h3>Updates</h3>
+    <li>None.</li>
+  {{ end }}
 
   <p>
     (Ends)
